--- a/tasks-app/package.json
+++ b/tasks-app/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
